issue fix for smaller screen sizes.

--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -144,6 +144,7 @@ footer a.nav-link {
 
   p{
      display: inline;
+     font-size: 90%;
   }
 }
  
@@ -199,9 +200,6 @@ footer {
     color: #ffffff;
   }
   
-
-
-
 
 
   
